--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <!-- <script type="module" crossorigin src="/assets/index.9065dc34.js"></script> -->
-    <link rel="stylesheet" href="/assets/index.21f79ace.css">
+    <!-- <link rel="stylesheet" href="/assets/index.21f79ace.css"> -->
     <script type="module" crossorigin src="./assets/index.9065dc34.js"></script>
+    <link rel="stylesheet" href="./assets/index.21f79ace.css">
 
   </head>
   <body>
