--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <!-- <script type="module" crossorigin src="/assets/index.9065dc34.js"></script> -->
-    <!-- <link rel="stylesheet" href="/assets/index.21f79ace.css"> -->
-    <script type="module" crossorigin src="./assets/index.9065dc34.js"></script>
+    <script type="module" crossorigin src="./assets/index.e6c6a243.js"></script>
     <link rel="stylesheet" href="./assets/index.21f79ace.css">
-
   </head>
   <body>
     <div id="app"></div>
