--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite Ap000p</title>
+    <title>Vite App</title>
     <script type="module" crossorigin src="./assets/index.6b5c0ab4.js"></script>
     <link rel="stylesheet" href="./assets/index.21f79ace.css">
   </head>
